# gbos-transcripts

./: .gitignore  PLAN.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-setup.ts  tsconfig.json  vitest.config.js  vitest.config.ts  vitest.shared.ts
api/: drizzle.config.ts  package-lock.json  package.json
api/src/: index.ts
api/src/__tests__/: meetings.test.ts  (+3 more)
pipeline/: justfile  package.json  pyproject.toml  tsconfig.json
pipeline/src/: db.ts  download.ts  identify.ts  transcribe.ts  update.ts
pipeline/src/gbos_pipeline/: __init__.py  align.py  config.py  db.py  diarize_audio.py  download.py  embed.py  identify.py  ingest.py  manage_people.py  transcribe.py  update.py
pipeline/src/gbos_pipeline/db/: snapshot.py
pipeline/tests/: conftest.py  test_align.py  test_diarize.py  test_download.py  test_embed.py  test_identify.py  test_ingest.py  test_snapshot.py  test_transcribe.py
pipeline/tests/fixtures/: sample_diarization.json  sample_transcript.json
pipeline/tests/fixtures/empty/: municipalities.csv
pipeline/tests/fixtures/one_municipality/: meetings.csv
pipeline/tests/snapshots/test_snapshot/test_empty_db/: schema.sql
pipeline/tests/snapshots/test_snapshot/test_insert_meeting/: meetings.csv
pipeline/tests/snapshots/test_snapshot/test_seeded_municipality/: municipalities.csv  people.csv  segments.csv
scripts/: backfill.sh  daily-update.sh  setup.sh
web/: .env.example  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: env.ts  routeTree.gen.ts
(+15 files in other folders)
