[project]
name = "gbos-pipeline"
version = "0.1.0"
description = "GBOS meeting transcript pipeline: download, transcribe, diarize, embed"
requires-python = ">=3.11"
dependencies = [
    "parakeet-mlx",
    "diarize",
    "sentence-transformers",
    "yt-dlp",
    "ffmpeg-python",
    "sqlite-vec",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gbos_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require ML models and real audio (deselect with '-m \"not integration\"')",
]
