[project]
name = "gbos-pipeline"
version = "0.1.0"
description = "GBOS meeting transcript pipeline: download, transcribe, diarize, embed"
requires-python = ">=3.14"
dependencies = [
    "parakeet-mlx",
    "diarize",
    "sentence-transformers",
    "yt-dlp",
    "ffmpeg-python",
    "sqlite-vec",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gbos_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require ML models and real audio (deselect with '-m \"not integration\"')",
]
